[package]
name = "btw-nl"
version = "0.1.0"
authors = ["Ytrog <hisbrucker@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Ytrog/btw-nl"
description = "Dutch VAT calculator for commandline"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.14.1"