[package]
name = "btw-nl"
version = "0.2.0"
authors = ["Ytrog <hisbrucker@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Ytrog/btw-nl"
description = "Dutch VAT calculator for commandline"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.14.1"
dialoguer = "0.8.0"